# fededa

./: .gitignore  .gitmodules  README.md  pyproject.toml
configs/: evaluate_chaticd.yaml  evaluate_edacorpus.yaml  evaluate_mmcircuiteval.yaml  evaluate_ordqa.yaml
configs/evaluation/: chaticd.yaml  edacorpus.yaml  mmcircuiteval.yaml  ordqa.yaml
configs/model/: qwen3_model.yaml  qwen_vl_finetuned_model.yaml  qwen_vl_model.yaml
outputs/: mmcircuiteval_distribution.txt
scripts/: _legacy_preprocess_dataset_digital_design_knowledge.py  analysis_mmcircuiteval.py  augment_dataset_circuit_understanding.py  bertopic_questions.py  check_dataset_structure.py  evaluate_chaticd.py  evaluate_edacorpus.py  evaluate_mmcircuiteval.py  evaluate_ordqa.py  generate_synthetic_data.py  inference.py  merge_finetune_datasets.py  preprocess_dataset_circuit_understanding.py  preprocess_dataset_digital_design_knowledge.py  preprocess_textbook.py
src/evaluation/: __init__.py  custom_evaluator.py  embedding_scorer.py  llm_scorer.py  unieval_scorer.py
src/evaluation/chaticd/: __init__.py  runner.py
src/evaluation/edacorpus/: __init__.py  runner.py
src/evaluation/mmcircuiteval/: __init__.py  evaluator.py  formatter.py  runner.py
src/evaluation/ordqa/: __init__.py  evaluator.py  runner.py  unieval_scorer.py
src/models/: __init__.py  builder.py  qwen3_model.py  qwen_vl_finetuned_model.py  qwen_vl_model.py
src/utils/: __init__.py  quantization.py  set_seed.py
