[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fededa"
version = "0.1.0"
description = "FedEDA project"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name="Junho Jeong", email="junh1127@snu.ac.kr" },
]
classifiers = [
    "Programming Language :: Python :: 3",
]

dependencies = [
    "numpy",
    "torch",
    "torchvision",
    "openai",
    "hydra-core",
    "omegaconf",
    "python-dotenv",
    "rouge",
    "nltk",
    "datasets",
    "tqdm",
    "Pillow",
    "transformers",
    "qwen-vl-utils",
    "bitsandbytes",
    "accelerate",
    "flash-attn",
    "sentencepiece!=0.1.92",
    "protobuf",
    "rouge-score",
    "py7zr",
    "evaluate",
    "prettytable",
    "vllm",
    "llama-parse",
    "llama-index-core",
    "langchain-text-splitters",
    "llama-cpp-python",
    "pdf2image",
    "torchvision",
    "deepspeed",
    "triton",
    "torchcodec",
    "peft",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]